apps/oxlint/src/snapshots/fixtures__cli__overrides_with_plugin_-c .oxlintrc.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json
working directory: fixtures/cli/overrides_with_plugin
----------

  x eslint-plugin-jest(valid-title): Should not have an empty title
   ,-[index.test.ts:1:10]
 1 | describe("", () => {
   :          ^^
 2 |   // ^ jest/no-valid-title error as explicitly set in the `.test.ts` override
   `----
  help: Write a meaningful title for your test

  ! eslint-plugin-vitest(valid-title): Should not have an empty title
   ,-[index.test.ts:1:10]
 1 | describe("", () => {
   :          ^^
 2 |   // ^ jest/no-valid-title error as explicitly set in the `.test.ts` override
   `----
  help: Write a meaningful title for your test

  ! eslint-plugin-jest(expect-expect): Test has no assertions
   ,-[index.test.ts:4:3]
 3 | 
 4 |   it("", () => {});
   :   ^^
 5 |   // ^ jest/no-valid-title error as explicitly set in the `.test.ts` override
   `----
  help: Add assertion(s) in this Test

  x eslint-plugin-jest(valid-title): Should not have an empty title
   ,-[index.test.ts:4:6]
 3 | 
 4 |   it("", () => {});
   :      ^^
 5 |   // ^ jest/no-valid-title error as explicitly set in the `.test.ts` override
   `----
  help: Write a meaningful title for your test

  ! eslint-plugin-vitest(valid-title): Should not have an empty title
   ,-[index.test.ts:4:6]
 3 | 
 4 |   it("", () => {});
   :      ^^
 5 |   // ^ jest/no-valid-title error as explicitly set in the `.test.ts` override
   `----
  help: Write a meaningful title for your test

  ! eslint(no-unused-vars): Variable 'foo' is declared but never used. Unused variables should start with a '_'.
   ,-[index.ts:1:7]
 1 | const foo = 123;
   :       ^|^
   :        `-- 'foo' is declared here
 2 | // no-unused-vars error expected as `eslint` plugin and `correctness` categories are on by default (override is not applied.)
   `----
  help: Consider removing this declaration.

Found 4 warnings and 2 errors.
Finished in <variable>ms on 2 files with 95 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
